@@ -1,0 +1,8 @@
+use strict;
+use warnings;
+
+# this test is invoked indirectly, via t/06-warnings.t
+use Test::Kwalitee 'kwalitee_ok';
+kwalitee_ok('has_changelog');
+
+1;
