@@ -2,6 +2,8 @@ Revision history for Test-Kwalitee
 
 {{$NEXT}}
     - bump Test::More prereq for (fully) working subtests
+    - properly detect the xt/ caller condition when running kwalitee_ok
+      directly (RT#120824)
 
 1.25      2017-02-28 03:21:28Z
     - fix test to not rely on . in @INC
